k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pern-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "pern-ingress-ip"
    networking.gke.io/managed-certificates: "pern-ssl-cert-v3"
    kubernetes.io/ingress.allow-http: "false"

spec:
  rules:
  - host: ecommerce.thltunneling.dpdns.org
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80    
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
